[CIVIC-1022] Fixed secondary logo squashed for inline variant. (#681)

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/logo/logo.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/logo/logo.scss
@@ -8,7 +8,14 @@
   line-height: 0;
 
   img {
-    width: 100%;
+    flex: 1;
+    max-width: $civictheme-logo-image-width-mobile;
+    max-height: $civictheme-logo-image-height-mobile;
+
+    @include civictheme-breakpoint('m') {
+      max-width: $civictheme-logo-image-width-desktop;
+      max-height: $civictheme-logo-image-height-desktop;
+    }
   }
 
   #{$root}--hr {
@@ -19,23 +26,39 @@
   &.civictheme-theme-light {
 
     #{$root}-type-inline {
-      display: inline-flex;
-
+      &,
       a {
-        display: inline-flex;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
       }
       #{$root}--hr {
-        border-left: 1px solid $civictheme-icon-light-stripe-color;
+        border-left: 1px solid $civictheme-logo-light-stripe-color;
+      }
+
+      &#{$root}-dual {
+        &,
+        a {
+          align-items: unset;
+        }
+
+        img {
+          max-width: $civictheme-logo-image-width-mobile * 0.5;
+
+          @include civictheme-breakpoint('m') {
+            max-width: $civictheme-logo-image-width-desktop * 0.5;
+          }
+        }
       }
     }
     #{$root}-type-stacked {
-      display: inline-block;
-
+      &,
       a {
         display: inline-block;
       }
       #{$root}--hr {
-        border: 1px solid $civictheme-icon-light-stripe-color;
+        border: 1px solid $civictheme-logo-light-stripe-color;
       }
     }
   }
@@ -43,23 +66,40 @@
   &.civictheme-theme-dark {
 
     #{$root}-type-inline {
-      display: inline-flex;
-
+      &,
       a {
-        display: inline-flex;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
       }
+
       #{$root}--hr {
-        border-left: 1px solid $civictheme-icon-dark-stripe-color;
+        border-left: 1px solid $civictheme-logo-dark-stripe-color;
+      }
+
+      &#{$root}-dual {
+        &,
+        a {
+          align-items: unset;
+        }
+
+        img {
+          max-width: $civictheme-logo-image-width-mobile * 0.5;
+
+          @include civictheme-breakpoint('m') {
+            max-width: $civictheme-logo-image-width-desktop * 0.5;
+          }
+        }
       }
     }
     #{$root}-type-stacked {
-      display: inline-block;
-
+      &,
       a {
         display: inline-block;
       }
       #{$root}--hr {
-        border: 1px solid $civictheme-icon-dark-stripe-color;
+        border: 1px solid $civictheme-logo-dark-stripe-color;
       }
     }
   }
